--- a/.github/workflows/php-8.2.yml
+++ b/.github/workflows/php-8.2.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   build:
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
@@ -42,7 +42,7 @@ jobs:
         coverage: pcov
 
     - name: Run CodeSniffer (phpcs)
-      run: composer run-script phpcs
+      run: composer run-script dev:lint:phpcs
 
     - name: Run Static Analyzer (phpstan)
-      run: composer run-script phpstan-8.2
+      run: composer run-script dev:analyze:phpstan-8.2
