--- a/composer.json
+++ b/composer.json
@@ -16,26 +16,47 @@
         "php": ">=8.1"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.10",
+        "captainhook/captainhook": "^5.23",
+        "captainhook/hook-installer": "^1.0",
+        "phpstan/phpstan": "^1.11",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan-deprecation-rules": "^1.2",
         "saggre/phpdocumentor-markdown": "^0.1",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.9"
     },
     "scripts": {
-        "create-all-docs": [
-            "@create-html-docs",
-            "@create-markdown-docs"
+        "dev:analyze": [
+            "@dev:analyze:phpstan"
         ],
-        "create-html-docs": "./phpdoc",
-        "create-markdown-docs": "./phpdoc --target=docs/phpdoc/markdown --template='vendor/saggre/phpdocumentor-markdown/themes/markdown'",
-        "phpcs": "./vendor/bin/phpcs ./src",
-        "phpstan": "@phpstan-8.1",
-        "phpstan-8.1": "./vendor/bin/phpstan --configuration=phpstan-8.1.neon",
-        "phpstan-8.2": "./vendor/bin/phpstan --configuration=phpstan-8.2.neon",
-        "phpstan-8.3": "./vendor/bin/phpstan --configuration=phpstan-8.3.neon"
+        "dev:analyze:phpstan": "@dev:analyze:phpstan-8.1",
+        "dev:analyze:phpstan-8.1": "phpstan --configuration=phpstan-8.1.neon --memory-limit=256M",
+        "dev:analyze:phpstan-8.2": "phpstan --configuration=phpstan-8.2.neon --memory-limit=256M",
+        "dev:analyze:phpstan-8.3": "phpstan --configuration=phpstan-8.3.neon --memory-limit=256M",
+        "dev:lint": [
+            "@dev:lint:phpcs"
+        ],
+        "dev:lint:phpcs": "phpcs ./src",
+        "dev:test": [
+            "@dev:lint",
+            "@dev:analyze"
+        ],
+        "test": "@dev:test",
+        "phpdoc": [
+            "@phpdoc-html",
+            "@phpdoc-markdown"
+        ],
+        "phpdoc-html": "phpdoc --target=docs/phpdoc/html",
+        "phpdoc-markdown": "phpdoc --target=docs/phpdoc/markdown --template=./vendor/saggre/phpdocumentor-markdown/themes/markdown"
     },
     "autoload": {
         "psr-4": {
             "Locr\\Lib\\": "src/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "captainhook/hook-installer": true,
+            "phpstan/extension-installer": true
         }
     }
 }
