--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,9 +31,9 @@ jobs:
         uses: actions/cache@v4
         with:
           path: vendor
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-php-${{ matrix.version }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
-            ${{ runner.os }}-php-
+            ${{ runner.os }}-php-${{ matrix.version }}
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
